apps/foundry-vtt/gobbos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foundry-gobbos
spec:
  ports:
    - port: 8080
      name: webdav
    - port: 30000
      name: http
  selector:
    app: foundry-gobbos
