apps/foundry-vtt/gobbos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry-gobbos
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd,traefik-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - foundry.hubbe.club
      secretName: foundry-cert
  rules:
    - host: foundry.hubbe.club
      http:
        paths:
          - path: /averion
            pathType: Prefix
            backend:
              service:
                name: foundry-gobbos
                port:
                  number: 30000
